tests/parsing/smtlib/v2.7/errors/002_qual_identifier_unclosed.smt2
(set-logic ALL)
(assert (as foo bar _))
